--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -1,9 +1,9 @@
-.players-container {
+#players-container {
     position: fixed;
     right: 0;
     top: 60px;
     width: 120px;
-    height: calc(100vh - 60px); // account for height height
+    height: calc(100vh - 60px); // account for header height
     display: flex;
     flex-direction: column;
     border-left: 1px solid black;
@@ -35,8 +35,8 @@
 
 #jeopardy-music {
     position: fixed;
-    left: 10px;
-    top: 70px;
+    left: 15px;
+    top: 75px;
 
     ion-icon {
         font-size: 2em;
