--- a/fe-jeopardy/src/app/game/recv-ans/recv-ans.component.less
+++ b/fe-jeopardy/src/app/game/recv-ans/recv-ans.component.less
@@ -1,8 +1,8 @@
-.answer-container {
+#answer-container {
     width: 460px;
 }
 
-.answer-input {
+#answer-input {
     display: flex;
     margin-top: 15px;
 
