--- a/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.less
+++ b/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.less
@@ -20,7 +20,7 @@ table {
         user-select: none;
     }
 
-    .category {
+    .category-title {
         color: white;
         min-height: 40px;
     }
@@ -29,6 +29,7 @@ table {
         color: #ffcc00;
         line-height: 30px;
         height: 40px;
+
         span {
             font-weight: bolder;
             font-size: 2em;
