--- a/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.less
+++ b/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.less
@@ -1,10 +1,10 @@
-.question-category {
+#question-category {
     font-size: 1.5em;
     margin-top: 14px;
     margin-bottom: 14px;
 }
 
-.wager-input {
+#wager-input {
     display: flex;
     flex-direction: column;
 
