--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -1,21 +1,21 @@
 .join-container {
     display: flex;
     flex-direction: column;
-
-    div {
-        width: 500px;
-        margin: auto;
-    }
-
+    width: 500px;
+    margin: auto;
+    margin-top: 90px;
+    
     hr {
-        margin: 0;
         width: 500px;
         margin: 30px auto;
-        border: none; 
         border-top: 1px solid grey;
     }
 
-    .input-container:first-child {
-        margin-top: 30px;
+    #join-buttons {
+        margin-top: 15px;
+    }
+
+    #game-code-input {
+        margin-top: 15px;
     }
 }
