--- a/fe-jeopardy/src/app/link-join/link-join.component.less
+++ b/fe-jeopardy/src/app/link-join/link-join.component.less
@@ -1,13 +1,11 @@
 .join-container {
     display: flex;
     flex-direction: column;
+    width: 500px;
+    margin: auto;
+    margin-top: 90px;
 
-    div {
-        width: 500px;
-        margin: auto;
-    }
-
-    .input-container:first-child {
-        margin-top: 30px;
+    input {
+        margin-bottom: 15px;
     }
 }
