--- a/fe-jeopardy/src/styles.less
+++ b/fe-jeopardy/src/styles.less
@@ -31,16 +31,15 @@ button:focus {
     flex-direction: column;
 
     input {
-        width: 100%;
+        flex: 1;
     }
 }
 
 .button-container {
     display: flex;
+    gap: 15px;
 
     button {
         flex: 1;
-        width: 160px;
-        margin-top: 10px;
     }
 }
