--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -1,32 +1,23 @@
-<div id='players' class='players-container'>
+<div id='players-container'>
 	<div *ngFor="let p of game.Players()" class='box'>
-		<p [ngStyle]="{'color': p.score < 0 ? 'red' : 'black'}">{{ p.score < 0 ? '-' : '' }}${{
-				abs(p.score) }} </p>
-				<p [ngStyle]="{'font-weight': p.id == player.Id() ? 'bold' : 'normal'}">{{ p.conn ? p.name :
-					'Waiting for
-					player to join' }}</p>
+		<p [ngStyle]="{'color': p.score < 0 ? 'red' : 'black'}">{{ p.score < 0 ? '-' : '' }}${{ abs(p.score) }} </p>
+		<p [ngStyle]="{'font-weight': p.id == player.Id() ? 'bold' : 'normal'}">{{ p.conn ? p.name : 'Waiting for player to join' }}</p>
 	</div>
 </div>
 
 <div id='game-container'>
-	<app-pre-game *ngIf="game.PreGame()" [gameMessage]="gameMessage" [gameName]="game.Name()"></app-pre-game>
-
+	<app-pre-game *ngIf="game.PreGame()" [gameName]="game.Name()"></app-pre-game>
 	<app-recv-pick *ngIf="game.RecvPick()" [countdownSeconds]="countdownSeconds"></app-recv-pick>
-
 	<app-recv-buzz *ngIf="game.RecvBuzz()" [countdownSeconds]="countdownSeconds"></app-recv-buzz>
-
 	<app-recv-ans *ngIf="game.RecvAns()" [countdownSeconds]="countdownSeconds"></app-recv-ans>
-
 	<app-recv-vote *ngIf="game.RecvVote()" [countdownSeconds]="countdownSeconds"></app-recv-vote>
-
 	<app-recv-wager *ngIf="game.RecvWager()" [countdownSeconds]="countdownSeconds"></app-recv-wager>
-
 	<app-post-game *ngIf="game.PostGame()"></app-post-game>
 </div>
 
 <app-chat></app-chat>
 
-<div *ngIf="game.PreGame() || game.PostGame() || game.FinalRound()" id='jeopardy-music'>
+<div id='jeopardy-music' *ngIf="game.PreGame() || game.FinalRound() || game.PostGame()">
 	<ion-icon (click)="stopMusic()" *ngIf="playMusic" name="volume-high-outline"></ion-icon>
 	<ion-icon (click)="startMusic()" *ngIf="!playMusic" name="volume-mute-outline"></ion-icon>
 	<div id='music-info' *ngIf="showMusicInfo">
