--- a/fe-jeopardy/src/app/game/pre-game/pre-game.component.less
+++ b/fe-jeopardy/src/app/game/pre-game/pre-game.component.less
@@ -2,17 +2,8 @@
 	margin-top: 20vh;
 }
 
-h2:after {
-    content: "...";
-    overflow: hidden;
-    display: inline-block;
-    vertical-align: bottom;
-    animation: ellipsis-dot 2s infinite;
-    animation-fill-mode: forwards;
-    width: 1.25em;
-}
 
-@keyframes ellipsis-dot {
+@keyframes ellipsis {
     25% {
         content: "";
     }
@@ -25,6 +16,16 @@ h2:after {
     100% {
         content: "...";
     }
+}
+
+h2:after {
+    content: "...";
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;
+    animation: ellipsis 2s infinite;
+    animation-fill-mode: forwards;
+    width: 1.25em;
 }
 
 #joinLink {
