--- a/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.less
+++ b/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.less
@@ -1,11 +1,11 @@
-.buzz-container {
+#buzz-container {
     width: 460px;
-}
 
-.button-container {
     button {
         margin-left: 35px;
         margin-right: 35px;
+        margin-top: 15px;
         padding: 20px 0;
     }
 }
+
