--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="toolbar" role="banner">
+<div class='toolbar flex-row' role="banner">
 	<h2>Jeopardy!</h2>
 </div>
 
 
-<div class="content" role="main">
+<div class='content' role="main">
 	<router-outlet></router-outlet>
 </div>
