--- a/fe-jeopardy/src/app/app.component.less
+++ b/fe-jeopardy/src/app/app.component.less
@@ -30,19 +30,14 @@ p {
     left: 0;
     right: 0;
     height: 60px;
-    display: flex;
     align-items: center;
-    background-color: #060ce9;
+    background-color: var(--jeopardy-blue);
     color: white;
     font-weight: 600;
 
     h2 {
         margin-left: 1em;
     }
-}
-
-.toolbar img {
-    margin: 0 16px;
 }
 
 a,
