--- a/fe-jeopardy/src/app/game/question/question.component.less
+++ b/fe-jeopardy/src/app/game/question/question.component.less
@@ -11,10 +11,11 @@ p {
 #question-box {
     width: 400px;
     color: white;
-    background-color: #060ce9;
+    background-color: var(--jeopardy-blue);
     padding: 30px;
     text-align: center;
     font-size: 1.5em;
     font-weight: bold;
     border-radius: 5px;
+    user-select: none;
 }
