--- a/fe-jeopardy/src/app/game/recv-ans/recv-ans.component.less
+++ b/fe-jeopardy/src/app/game/recv-ans/recv-ans.component.less
@@ -3,11 +3,10 @@
 }
 
 #answer-input {
-    display: flex;
     margin-top: 15px;
+    gap: 10px;
 
-    input {
-        flex: 1;
-        margin-right: 10px;
+    button {
+        flex: 0;
     }
 }
