--- a/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.less
+++ b/fe-jeopardy/src/app/game/recv-buzz/recv-buzz.component.less
@@ -1,11 +1,13 @@
 #buzz-container {
     width: 460px;
 
-    button {
-        margin-left: 35px;
-        margin-right: 35px;
+    #buzz-buttons {
+        gap: 30px;
         margin-top: 15px;
-        padding: 20px 0;
+
+        button {
+            padding: 20px 0;
+        }
     }
 }
 
