--- a/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.less
+++ b/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.less
@@ -9,7 +9,7 @@ table {
         border: 5px solid black;
         padding: 10px;
         text-align: center;
-        background-color: #060ce9;
+        background-color: var(--jeopardy-blue);
         font-weight: bold;
     }
 
@@ -26,7 +26,7 @@ table {
     }
 
     .question-value {
-        color: #ffcc00;
+        color: var(--jeopardy-yellow);
         line-height: 30px;
         height: 40px;
 
