--- a/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.less
+++ b/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.less
@@ -5,10 +5,5 @@
 }
 
 #wager-input {
-    display: flex;
-    flex-direction: column;
-
-    input {
-        margin-bottom: 15px;
-    }
+    gap: 15px;
 }
