--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -1,23 +1,21 @@
-<div class='join-container'>
-    <div class='input-container'>
+<div class='join-container flex-column'>
+    <div class='flex-column'>
         <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
 
-        <div id='join-buttons' class='button-container'>
+        <div id='join-buttons' class='flex-row'>
             <button (click)="joinPublicGame(playerName)">Join any game</button>
             <button (click)="createPrivateGame(playerName)">Create a private game</button>
             <button (click)="toggleGameCodeInput()">Join game by code</button>
         </div>
     </div>
     
-    <div id='game-code-input'  class='input-container' *ngIf="showGameCodeInput" >
+    <div id='game-code-input' class='flex-row' *ngIf="showGameCodeInput">
         <input  (keydown.enter)="joinGameByCode(playerName, gameCode)" type="text" [(ngModel)]="gameCode" placeholder="Game code">
     </div>
 
     <hr>
     
-    <div class='input-container'>
-        <div class='button-container'>
-            <button style='margin-top: 0' (click)="rejoin()">Disconnected? Click to rejoin</button>
-        </div>
+    <div class='flex-row'>
+        <button style='margin-top: 0' (click)="rejoin()">Disconnected? Click to rejoin</button>
     </div>
 </div>
