--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -1,21 +1,20 @@
 .join-container {
-    display: flex;
-    flex-direction: column;
     width: 500px;
     margin: auto;
     margin-top: 90px;
+    
+    #join-buttons {
+        margin-top: 15px;
+        gap: 15px;
+    }
+
+    #game-code-input {
+        margin-top: 15px;
+    }
     
     hr {
         width: 500px;
         margin: 30px auto;
         border-top: 1px solid grey;
-    }
-
-    #join-buttons {
-        margin-top: 15px;
-    }
-
-    #game-code-input {
-        margin-top: 15px;
     }
 }
