--- a/fe-jeopardy/src/app/game/chat/chat.component.html
+++ b/fe-jeopardy/src/app/game/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!hideChat" id='game-chat'>
+<div id='game-chat' class='flex-column' *ngIf="!hideChat">
     <div id='chat-header'>
         <span>Jeopardy Chat</span>
         <ion-icon name="close-outline" (click)="closeChat()"></ion-icon>
@@ -12,9 +12,9 @@
         </div>
     </div>
 
-    <div id='chat-input'>
+    <div id='chat-input' class='flex-row'>
         <input [(ngModel)]="message" (keyup.enter)="sendMessage()" placeholder="Type a message..." />
-        <button (click)="sendMessage()">Send</button>
+        <button (click)="sendMessage()"><ion-icon name="paper-plane-outline"></ion-icon></button>
     </div>
 </div>
 
