--- a/fe-jeopardy/src/app/game/chat/chat.component.less
+++ b/fe-jeopardy/src/app/game/chat/chat.component.less
@@ -8,13 +8,11 @@
     border: 2px solid black;
     border-radius: 5px;
 
-    display: flex;
-    flex-direction: column;
-
     #chat-header {
         padding: 5px;
         border-bottom: 1px solid black;
         background-color: white;
+        flex: 0;
 
         ion-icon {
             float: right;
@@ -35,6 +33,7 @@
 
         .chat-message {
             padding: 8px;
+            font-size: 12px;
 
             .message-username {
                 font-weight: bold;
@@ -61,13 +60,20 @@
     }
 
     #chat-input {
-        display: flex;
         padding: 10px;
         border-top: 1px solid black;
         background-color: white;
+        flex: 0;
+        gap: 5px;
 
         input {
-            flex-grow: 1;
+            font-size: 12px;
+            padding: 8px;
+        }
+
+        button {
+            flex: 0;
+            line-height: 0;
         }
     }
 }
