--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -4,14 +4,9 @@
     top: 60px;
     width: 120px;
     height: calc(100vh - 60px); // account for header height
-    display: flex;
-    flex-direction: column;
     border-left: 1px solid black;
 
-    .box {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
+    .player-box {
         justify-content: center;
         text-align: center;
         padding: 10px;
