--- a/fe-jeopardy/src/app/game/recv-vote/recv-vote.component.less
+++ b/fe-jeopardy/src/app/game/recv-vote/recv-vote.component.less
@@ -1,13 +1,12 @@
 .vote-container {
     width: 460px;
 
-}
+    #vote-buttons {
+        gap: 30px;
+        margin-top: 15px;
 
-.button-container {
-    button {
-        margin-left: 35px;
-        margin-right: 35px;
-        margin-top: 0;
-        padding: 20px 0;
+        button {
+            padding: 20px 0;
+        }
     }
 }
