--- a/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.html
+++ b/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2 *ngIf="game.FinalRound()">Final Jeopardy</h2>
     <p id='question-category'>{{ game.CurCategory() }}</p>
-    <div id='wager-input' *ngIf="player.CanWager()">
+    <div id='wager-input' class='flex-column' *ngIf="player.CanWager()">
         <input type="number" [(ngModel)]="wagerAmt" placeholder="Enter your wager">
         <button (click)="handleWager()">Wager</button>
     </div>
