--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -1,20 +1,11 @@
 .join-container {
-    width: 500px;
-    margin: auto;
-    margin-top: 90px;
-    
-    #join-buttons {
-        margin-top: 15px;
-        gap: 15px;
-    }
+    gap: 30px;
 
-    #game-code-input {
-        margin-top: 15px;
+    #join-inputs, #join-buttons {
+        gap: 15px;
     }
     
     hr {
-        width: 500px;
-        margin: 30px auto;
-        border-top: 1px solid grey;
+        margin: 0;
     }
 }
