--- a/fe-jeopardy/src/app/link-join/link-join.component.less
+++ b/fe-jeopardy/src/app/link-join/link-join.component.less
@@ -1,9 +1,3 @@
 .join-container {
-    width: 500px;
-    margin: auto;
-    margin-top: 90px;
-
-    input {
-        margin-bottom: 15px;
-    }
+    gap: 15px;
 }
