--- a/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.less
+++ b/fe-jeopardy/src/app/game/recv-wager/recv-wager.component.less
@@ -1,9 +1,14 @@
-#question-category {
-    font-size: 1.5em;
-    margin-top: 14px;
-    margin-bottom: 14px;
-}
+#wager-container {
+    width: 200px;
 
-#wager-input {
-    gap: 15px;
+    #question-category {
+        font-size: 1.5em;
+        margin-top: 14px;
+        margin-bottom: 14px;
+        overflow-wrap: break-word;
+    }
+    
+    #wager-input {
+        gap: 15px;
+    }
 }
