--- a/fe-jeopardy/src/app/game/question/question.component.html
+++ b/fe-jeopardy/src/app/game/question/question.component.html
@@ -2,6 +2,6 @@
 <p id='question-comments' *ngIf="game.CurComments() != ''">Comments: {{ game.CurComments() }}</p>
 <p *ngIf="!game.FinalRound()">${{ game.CurValue() }}</p>
 <p *ngIf="game.FinalRound() && player.CanAnswer()">Wager: ${{ player.FinalWager() }}</p>
-<div id='question-box'>
+<div class='question-box'>
     {{ game.CurQuestion() }}
 </div>
