--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -13,5 +13,5 @@
 
     <hr>
     
-    <button style='margin-top: 0' (click)="rejoin()">Disconnected? Click to rejoin</button>
+    <button (click)="rejoin()">Disconnected? Click to rejoin</button>
 </div>
