--- a/fe-jeopardy/src/styles.less
+++ b/fe-jeopardy/src/styles.less
@@ -42,7 +42,7 @@ button:hover {
     margin-top: calc(var(--header-height) + 30px);
 }
 
-#question-box {
+.question-box {
     width: 450px;
     padding: 30px;
     background-color: var(--jeopardy-blue);
@@ -52,4 +52,10 @@ button:hover {
     font-weight: bold;
     border-radius: 5px;
     user-select: none;
+}
+
+.question-category {
+    font-size: 1.5em;
+    margin: 15px 0;
+    overflow-wrap: break-word;
 }
