--- a/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
+++ b/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
@@ -18,5 +18,5 @@
             </td>
         </tr>
     </table>
-    <p><b>{{ game.PickingPlayer() }}'s</b> turn to pick: {{ countdownSeconds }}</p>
+    <!-- <p><b>{{ game.PickingPlayer() }}'s</b> turn to pick: {{ countdownSeconds }}</p> -->
 </div>
