--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -8,29 +8,14 @@
 <div id='game-container'>
 	<div id='game-state'>
 		<app-pre-game *ngIf="game.PreGame()" [gameName]="game.Name()"></app-pre-game>
-		<app-recv-pick *ngIf="game.RecvPick()" [countdownSeconds]="countdownSeconds"></app-recv-pick>
-		<app-recv-buzz *ngIf="game.RecvBuzz()" [countdownSeconds]="countdownSeconds"></app-recv-buzz>
-		<app-recv-ans *ngIf="game.RecvAns()" [countdownSeconds]="countdownSeconds"></app-recv-ans>
-		<app-recv-vote *ngIf="game.RecvVote()" [countdownSeconds]="countdownSeconds"></app-recv-vote>
-		<app-recv-wager *ngIf="game.RecvWager()" [countdownSeconds]="countdownSeconds"></app-recv-wager>
+		<app-recv-pick *ngIf="game.RecvPick()"></app-recv-pick>
+		<app-recv-buzz *ngIf="game.RecvBuzz()"></app-recv-buzz>
+		<app-recv-ans *ngIf="game.RecvAns()"></app-recv-ans>
+		<app-recv-vote *ngIf="game.RecvVote()"></app-recv-vote>
+		<app-recv-wager *ngIf="game.RecvWager()"></app-recv-wager>
 		<app-post-game *ngIf="game.PostGame()"></app-post-game>
-		<div id='countdown-bar' class='flex-row'>
-			<div class='countdown-box' *ngFor="let i of countdownBoxes" id="countdown-{{ i }}">
-				
-			</div>
-		</div>
-		<!-- <div id='timeout' class='flex-row'>
-			<div class='timeout-bar'>
-				<div class='ticker' #leftTimeout>
-	
-				</div>
-			</div>
-			<div class='timeout-bar'>
-				<div class='ticker' #rightTimeout>
-	
-				</div>
-			</div>
-		</div> -->
+
+		<div id='countdown-bar' class='flex-row'></div>
 	</div>
 </div>
 
